--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Memory Game Project</title>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link rel="stylesheet" type="text/css" href="styles/medium-view.css" media="screen and (min-width: 400px)">
     <link rel="stylesheet" type="text/css" href="styles/large-view.css" media="screen and (min-width: 700px)">
